smaller changes and fix of cards on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,7 @@ body {
 
 h1, h2, h3, h4, h5 {
   font-family: 'Roboto Slab';
+  text-align: left;
 }
 
 img {
